proofread up to job chapter 10

--- a/final product/OEBPS/EST.xhtml
+++ b/final product/OEBPS/EST.xhtml
@@ -345,7 +345,7 @@
 <aside epub:type='footnote' id="FN53"><p class="f"><a class="notebackref" href="#ET6_9"><span class="notemark">†</span> 6.9</a>
  <span class="ft">Heb. cause him to ride.</span></p></aside>
 <aside epub:type='footnote' id="FN54"><p class="f"><a class="notebackref" href="#ET6_10"><span class="notemark">†</span> 6.10</a>
- <span class="ft">Heb. suffer not a what to fall.</span></p></aside>
+ <span class="ft">Heb. suffer not a whit to fall.</span></p></aside>
 <aside epub:type='footnote' id="FN55"><p class="f"><a class="notebackref" href="#ET7_1"><span class="notemark">†</span> 7.1</a>
  <span class="ft">Heb. to drink.</span></p></aside>
 <aside epub:type='footnote' id="FN56"><p class="f"><a class="notebackref" href="#ET7_4"><span class="notemark">†</span> 7.4</a>
