--- a/final product/OEBPS/MAT.xhtml
+++ b/final product/OEBPS/MAT.xhtml
@@ -1451,7 +1451,7 @@
 <aside epub:type='footnote' id="FN74"><p class="f"><a class="notebackref" href="#MT6_3"><span class="notemark">‡</span> 6.3</a>
  <span class="ft">[1611 <span class="add">omits</span> hand]</span></p></aside>
 <aside epub:type='footnote' id="FN75"><p class="f"><a class="notebackref" href="#MT6_7"><span class="notemark">*</span> 6.7</a>
- <span class="ft">7. 14.</span></p></aside>
+ <span class="ft">Ecclus. <a href='ECC.xhtml#EC7_16'>7. 16.</a></span></p></aside>
 <aside epub:type='footnote' id="FN76"><p class="f"><a class="notebackref" href="#MT6_9"><span class="notemark">*</span> 6.9</a>
  <span class="ft">Luke <a href='LUK.xhtml#LK11_2'>11. 2</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN77"><p class="f"><a class="notebackref" href="#MT6_14"><span class="notemark">*</span> 6.14</a>
