--- a/final product/OEBPS/JOB.xhtml
+++ b/final product/OEBPS/JOB.xhtml
@@ -1779,7 +1779,7 @@
 <aside epub:type='footnote' id="FN234"><p class="f"><a class="notebackref" href="#JB20_2"><span class="notemark">†</span> 20.2</a>
  <span class="ft">Heb. my haste is in me.</span></p></aside>
 <aside epub:type='footnote' id="FN235"><p class="f"><a class="notebackref" href="#JB20_5"><span class="notemark">*</span> 20.5</a>
- <span class="ft">Ps. 37. <a href='PSA.xhtml#PS37_35'>35</a>, <a href='PSA.xhtml#PS37_35'>35</a>.</span></p></aside>
+ <span class="ft">Ps. <a href='PSA.xhtml#PS37_37'>37. 37</a></span></p></aside>
 <aside epub:type='footnote' id="FN236"><p class="f"><a class="notebackref" href="#JB20_5"><span class="notemark">†</span> 20.5</a>
  <span class="ft">Heb. from near.</span></p></aside>
 <aside epub:type='footnote' id="FN237"><p class="f"><a class="notebackref" href="#JB20_6"><span class="notemark">†</span> 20.6</a>
@@ -1889,7 +1889,7 @@
 <aside epub:type='footnote' id="FN289"><p class="f"><a class="notebackref" href="#JB23_12"><span class="notemark">∥</span> 23.12</a>
  <span class="ft">Or, my appointed portion</span></p></aside>
 <aside epub:type='footnote' id="FN290"><p class="f"><a class="notebackref" href="#JB23_13"><span class="notemark">*</span> 23.13</a>
- <span class="ft">Ps. <a href='PSA.xhtml#PS115_8'>115. 8</a>.</span></p></aside>
+ <span class="ft">Ps. <a href='PSA.xhtml#PS115_3'>115. 3</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN291"><p class="f"><a class="notebackref" href="#JB24_2"><span class="notemark">*</span> 24.2</a>
  <span class="ft">Deut. <a href='DEU.xhtml#DT19_14'>19. 14</a>. &amp;c <a href='DEU.xhtml#DT27_17'>27. 17</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN292"><p class="f"><a class="notebackref" href="#JB24_2"><span class="notemark">∥</span> 24.2</a>
